# hiena2016A

./: .gitignore  Makefile  Makefile.am  configure.ac  hiena  makerr
design/: .access_path.design.swp  .domain_packet.design.swp  .lookup_cache_indexing.design.swp  .string_cache.design.swp  ::w  access_path.design  attacks.design  changelog.txt  code_dependencies.design  domain_packet.design  fusenotes.txt  grid.design  hack-mountoverdir.txt  lookup_cache_indexing.design  main.yaml  main_jun2016.txt  map.design  mounting.design  scannerlib.design  security.design  server.design  status_report.txt  string_cache.design  usecase_osx.design
grand_scheme/: .main.yaml.swp  main.yaml
include/: Doxyfile  Doxyfile.bak  Makefile.am  doxygen_sqlite3.db  gob.c  gob.h
lib/: Makefile.am
progconf/: paths.h  sizes.h
src/: .dpakstream.c.swo  .dpakstream.design.swo  .libhiena.c.swp  .ppak.c-for_swp-OFF  .ppak.c.swp-OFF  .ppak.design.swo  .ppak.design.swp  .ppak.h.swp  .server.design.swo  .server.design.swp  accesspath.c  accesspath.h  accesspath_branches.c  accesspathdb.c  accesspathdb.h  addr_t.c  addr_t.h  atab.c  axpa.c  axpa.h  axpadex.c  axpadex.h  bounds_t.c  bounds_t.h  btree.c  btree.h  cosm.c  cosmos_aframe.h  cosmos_grid.h  cosmosfs.c  domaincell.c  domaincell.h  domaincell_callbacks.c  domaincell_handle.h  domaincell_map.c  domaincelldb.c  domainhandle.h  domainstream.c  dpak.c  dpak.h  (+54 more)
srv/: server.h
ss/: .cli_args.ss.c.swp  README
test/: .gitignore  Makefile  test-hpat  test-hpat.c  test-scannerlib  test-scannerlib.c  test-serverlib.c  test-stringcache  testg.ox  (+1 more)
(+234 files in other folders)
